@@ -33,11 +33,14 @@ export(GetDefaultTooltip)
 export(GetPhyloNr)
 export(NODE_RESERVED_NAMES_CONST)
 export(Node)
+export(Prune)
+export(Revert)
 export(Set)
 export(SetEdgeStyle)
 export(SetFormat)
 export(SetGraphStyle)
 export(SetNodeStyle)
+export(Sort)
 export(ToDataFrameNetwork)
 export(ToDataFrameTable)
 export(ToDataFrameTree)
