@@ -24,5 +24,4 @@ Reverts the sort order of a \code{Node}'s children.
 
 \code{\link{Sort}}
 }
-\keyword{internal}
 
