@@ -3,6 +3,9 @@
 ## Version 0.3.6
 - FIX: GetDefaultTooltip now also works for attributes which are functions
 - FIX: GetAttribute now returns attributes with length 0 (e.g. an empty list)
+- ADD: Sort, Revert and Prune are now also available in traditional format (e.g. Prune(node, pruneFun))
+- FIX: Empty lists now become empty nodes (#59)
+- IMPROVE: documentation of Aggregate
 
 ## Version 0.3.5
 - FIX: minor correction in documentation
